# varpro

./: .gitignore  CHANGES.md  Cargo.toml  README.md  run_tests.sh
.github/workflows/: build-msrv.yml  build.yml  coverage.yml  lints.yml  tests.yml
benches/: double_exponential_without_noise.rs  multiple_right_hand_sides.rs
shared_test_code/: Cargo.toml
shared_test_code/src/: lib.rs
src/: fit.rs  lib.rs  problem.rs
src/model/: mod.rs
src/model/builder/: mod.rs
src/problem/: builder.rs
src/problem/builder/: test.rs
src/solvers/: mod.rs
src/solvers/levmar/: levmar_problem.rs  mod.rs  test.rs
src/solvers/levmar/levmar_problem/: builder.rs  colpiv_qr.rs  svd.rs
src/statistics/: mod.rs
tests/integration_tests/: main.rs
