[package]
name = "varpro"
version = "0.13.2"
authors = ["geo-ant"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/geo-ant/varpro"
repository = "https://github.com/geo-ant/varpro"
description = "A straightforward nonlinear least-squares fitting library which uses the Variable Projection algorithm."
readme = "README.md"
categories = ["mathematics", "science", "algorithms"]
keywords = ["nonlinear", "regression", "function", "fitting", "least-squares"]

[workspace]
members = [".","shared_test_code"]

[features]
default = []
# don't set this feature externally. It's used internally to flag that a
# lapack dependency was enabled.
__lapack = []

# these flags mirror the lapack flags that we can pass to nalgebra-lapack
# and will select the backend accordingly.
lapack-netlib = ["__lapack", "nalgebra-lapack/lapack-netlib"]
lapack-mkl = ["__lapack", "lapack-mkl-static-seq"]
lapack-mkl-static-seq = ["__lapack", "nalgebra-lapack/lapack-mkl-static-seq"]
lapack-mkl-static-par = ["__lapack", "nalgebra-lapack/lapack-mkl-static-par"]
lapack-mkl-dynamic-seq = ["__lapack", "nalgebra-lapack/lapack-mkl-dynamic-seq"]
lapack-mkl-dynamic-par = ["__lapack", "nalgebra-lapack/lapack-mkl-dynamic-par"]
lapack-openblas = ["__lapack", "nalgebra-lapack/lapack-openblas"]
lapack-accelerate = ["__lapack", "nalgebra-lapack/lapack-accelerate"]
lapack-custom = ["__lapack","nalgebra-lapack/lapack-custom"]

[dependencies]
thiserror = "1"
levenberg-marquardt = "0.15"
nalgebra = { version = "0.34", features = []}
nalgebra-lapack = { version = "0.26", default-features = false, optional = true}
num-traits = "0.2"
distrs = "0.2"

[dev-dependencies]
approx = "0.5"
num-complex = "0.4"
criterion = "0.5"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
shared_test_code = { path = "./shared_test_code" }
assert_matches = "1.5"
mockall = "0.11"
rand = "0.8"
byteorder = "1.5"
typed_test_gen = "0.1"

[[bench]]
name = "double_exponential_without_noise"
harness = false

[[bench]]
name = "multiple_right_hand_sides"
harness = false

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --open
rustdoc-args = ["--html-in-header", "katex-header.html"]

# TODO TODO TODO remove this before publish
[patch.crates-io]
nalgebra = {path = "../nalgebra"}
nalgebra-lapack = {path = "../nalgebra/nalgebra-lapack"}
